--- a/readme.Rmd
+++ b/readme.Rmd
@@ -46,3 +46,8 @@ https://rstudio-pubs-static.s3.amazonaws.com/508643_d6cb2a0b10484f40b1bcba052dda
 
 - [Themen Hackathon](https://airtable.com/shrs71ccUVKyvLlUA/tbl6Br4W3IyPGk1jt/viw7AlEju6qFtXJqL?blocks=hide)
 
+## Berichte zum Hackathon
+
+- [BR zu Wirvsvirus](https://www.br.de/nachrichten/deutschland-welt/wirvsvirus-ueber-tausend-loesungen-zur-coronakrise,RtzHVUI)
+
+- [ntv](https://www.n-tv.de/politik/Bund-will-Hackathon-Ideen-umsetzen-article21661141.html)
